Make sure file paths are horizontally aligned

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -263,6 +263,8 @@ main {
       margin-bottom: .5rem;
 
       .date {
+        display: inline-block;
+        min-width: 80px;
         color: @color-text--muted;
         margin-right: 1rem;
       }
